--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "typescript": "^5.6.3"
   },
   "dependencies": {
+    "@prisma/client": "^5.21.1",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.7",
     "dotenv": "^16.4.5",
