Created license and readme

--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "name": "finance-management-api",
   "version": "1.0.0",
   "main": "app.js",
+  "license": "MIT",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start:dev": "nodemon --watch src --exec ts-node --files src/app.ts"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
   "description": "",
   "devDependencies": {
     "@types/cookie-parser": "^1.4.7",
